--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -2,6 +2,11 @@ _welcome:
     pattern:  /
     defaults: { _controller: AcmeDemoBundle:Welcome:index }
 
+_sandbox:
+    resource: "@AcmeDemoBundle/Controller/SandboxController.php"
+    type:     annotation
+    prefix:   /sandbox
+
 _demo_secured:
     resource: "@AcmeDemoBundle/Controller/SecuredController.php"
     type:     annotation
