--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sensio/framework-extra-bundle": "dev-master",
         "sensio/generator-bundle": "dev-master",
         "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*"
+        "jms/di-extra-bundle": "1.1.*",
+        "coo/friendship-bundle": "dev-dev"
     },
     "scripts": {
         "post-install-cmd": [
