--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+_sandbox:
+    resource: "@AcmeSandboxBundle/Controller/"
+    type:     annotation
+    prefix:   /sandbox
+
 # Internal routing configuration to handle ESI
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
