--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "sensio/generator-bundle": "dev-master",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
+        "friendsofsymfony/user-bundle": "*",
         "coo/friendship-bundle": "dev-dev"
     },
     "scripts": {
