--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,6 +1,11 @@
+_sandbox:
+    resource: "@AcmeSandboxBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 _welcome:
     pattern:  /
-    defaults: { _controller: AcmeDemoBundle:Welcome:index }
+    defaults: { _controller: AcmeSandboxBundle:Default:index }
 
 _demo_secured:
     resource: "@AcmeDemoBundle/Controller/SecuredController.php"
